# rust-prolog

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  likes.prolog  prelude.pl
examples/: haskell-prelude.pl
src/: heap.rs  lexer.rs  main.rs  parser.lalrpop  prelude.pl  solve.rs  sort.pl  syntax.rs  token.rs  unify.rs
