[package]
name = "rust-prolog"
version = "0.1.0"
authors = ["dagit <dagitj@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[profile.dev]
opt-level = 2
debug = true

[dependencies]
rustyline   = "*"
regex       = "*"
lazy_static = "*"
ctrlc       = "*"
gc          = "*"
gc_derive   = "*"
lalrpop-util = ">=0.16.2"

[build-dependencies]
lalrpop = ">=0.16.2"
