[package]
name = "rust-prolog"
version = "0.1.0"
authors = ["dagit <dagitj@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[profile.dev]
opt-level = 2
debug = true

[dependencies]
rustyline   = "*"
lazy-regex  = "*"
ctrlc       = "*"
lalrpop-util = "0.23.1"
clap        = { version = "*", features = ["derive"] }
directories = "*"

[build-dependencies]
lalrpop = "0.23.1"
